--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,10 +9,12 @@ source:
   fn: {{ name }}-{{ version }}.tgz
   url: https://sourceforge.net/projects/{{ name }}/files/{{ name }}-1.1.x%20%28new%29/{{ name }}-1.1/{{ name }}-{{ version }}.tar.gz
   sha256: 2cbbea55a5d6895c9f0116a9a9ce3afb86df383cd05c9d6c1a4238e5e5c8f51d
+  patches:
+    - osx_remove_manual_test.patch  # [osx]
 
 build:
   skip: true  # [win]
-  number: 0
+  number: 1
 
 requirements:
   build:
@@ -27,6 +29,8 @@ test:
     - test -f "${PREFIX}/lib/liblog4cpp.la"
     - test -f "${PREFIX}/lib/liblog4cpp${SHLIB_EXT}"
     - log4cpp-config --help
+    - conda inspect linkages -p $PREFIX log4cpp  # [not win]
+    - conda inspect objects -p $PREFIX log4cpp  # [osx]
 
 about:
   home: http://log4cpp.sourceforge.net
