--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,6 +15,9 @@ source:
 
 build:
   number: 1002
+  run_exports:
+    # https://abi-laboratory.pro/index.php?view=timeline&l=log4cpp
+    - {{ pin_subpackage('log4cpp', max_pin='x.x') }}
 
 requirements:
   build:
