--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -40,7 +40,7 @@ test:
 
 about:
   home: http://log4cpp.sourceforge.net
-  license: LGPL-2.1
+  license: LGPL-2.1-or-later
   license_file: COPYING
   summary: Log4cpp is library of C++ classes for flexible logging to files
   description: |
